@@ -1,3 +1,8 @@
+Changes in @NEW@:
+  o Bug Fixes:
+    * A bug that could cause incorrect SQLite database error messages
+      has been fixed. (CNY-1840)
+
 Changes in 1.1.31.11:
   o Bug Fixes:
     * A bug that caused internal server errors when retrieving
